--- a/index.html
+++ b/index.html
@@ -68,34 +68,7 @@
                     </tr>
                 </tbody>
                 <tbody class="tb-books">
-                    <tr>
-                        <td>The Foundation Trilogy</td>
-                        <td>Isaac Asimov</td>
-                        <td>679</td>
-                        <td class="read">Unread</td>
-                        <td><button class="delete-btn">Delete</button></td>
-                    </tr>
-                    <tr>
-                        <td>The Sven Hassel Collection</td>
-                        <td>Sven Hasse</td>
-                        <td>4216</td>
-                        <td class="read">Read</td>
-                        <td><button class="delete-btn">Delete</button></td>
-                    </tr>
-                    <tr>
-                        <td>Shogun</td>
-                        <td>James Clavell</td>
-                        <td>1152</td>
-                        <td class="read">Unread</td>
-                        <td><button class="delete-btn">Delete</button></td>
-                    </tr>
-                    <tr>
-                        <td>Dune</td>
-                        <td>Frank Herbert</td>
-                        <td>658</td>
-                        <td class="read">Read</td>
-                        <td><button class="delete-btn">Delete</button></td>
-                    </tr>
+                    <!-- --------------- Books added with JS ------------------ -->
                 </tbody>
             </table>
         </section>
