--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
            
             <div class="sidebar-item github-icon">
                 <img src="images/github.svg" alt="" class="menu-img">
-                <a href="">Project on Github</a>
+                <a href="https://github.com/bobby2910/Library" target="_blank">Project on Github</a>
             </div>
         </section>  
         <section class="main">
